Related: tdf#152196 these should be at least DeviceCoordinate

Change-Id: I50404aaf522d5361fb2110258020564cb888f44d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143621
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>