vcl/inc/sallayout.hxx
@@ -132,7 +132,7 @@ public:
 
 private:
     // for glyph+font+script fallback
-    void            MoveGlyph(int nStart, tools::Long nNewXPos);
+    void            MoveGlyph(int nStart, DeviceCoordinate nNewXPos);
     void            DropGlyph(int nStart);
     void            Simplify(bool bIsBase);
 
